fix a wrong spelling
Signed-off-by: J. R. Okajima <hooanon05g@gmail.com>

--- a/aufs.in.5
+++ b/aufs.in.5
@@ -1660,7 +1660,7 @@ This is the default policy.
 .B create=tdmfs:low[:second]
 Select the highest writable branch regardless the existence of the
 parent dir. If the free space of this branch is less than `low' bytes,
-then the next hightest writable branch will be selected.
+then the next highest writable branch will be selected.
 If the free space of all writable branches are less than `low' bytes,
 then create=mfs policy is applied.
 For the duration (`second') parameter, see create=mfs[:second] below.
